# fullstack_todo_1KD9

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/core/: constants.py
api/source/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/source/migrations/: 0001_initial.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/views/: Home.vue
settings/: base.py  local.py
urls/: urls.py
